--- a/projects/ambulance/src/app/shared/components/photo/photo.component.html
+++ b/projects/ambulance/src/app/shared/components/photo/photo.component.html
@@ -1,8 +1,33 @@
-<div class="container"
-     ambUpload
-     (onHover)="changeHover($event)"
-     (onUpload)="fileUpload($event)"
-     [ngClass]="{hover: statusHover}"
-     #photo
+<div
+  *ngIf="!isUsingWebCam"
+  class="container"
+  ambUpload
+  (onHover)="changeHover($event)"
+  (onUpload)="fileUpload($event)"
+  [ngClass]="{ hover: statusHover }"
+  (click)="executeLoadImage()"
+  #photo
 ></div>
-<p>Arrastre una imagen al rectangulo superior</p>
+<webcam
+  *ngIf="isUsingWebCam"
+  [height]="207"
+  [width]="168"
+  [trigger]="triggerAsObservable()"
+  (imageCapture)="capturePhotoFrontWebCam($event)"
+  mirrorImage="never"
+></webcam>
+<p *ngIf="!isUsingWebCam">Arrastre una imagen al rectangulo superior</p>
+<input type="file" (change)="selectImage($event)" #file />
+<div fxLayout fxLayoutGap="10px" fxLayoutAlign="center center">
+  <mat-slide-toggle (change)="changeOriginPhoto($event)" [checked]="checkedWebCam" color="primary"
+    >Usar webcam
+  </mat-slide-toggle>
+  <button
+    mat-icon-button
+    color="primary"
+    *ngIf="isUsingWebCam"
+    (click)="takePhoto()"
+  >
+    <mat-icon>add_a_photo</mat-icon>
+  </button>
+</div>
