--- a/projects/ambulance/src/app/dashboard/dashboard/dashboard.component.html
+++ b/projects/ambulance/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
 <amb-title></amb-title>
+<div fxLayout="space-around center">
+  <amb-atmosferica></amb-atmosferica>
+  <amb-socket></amb-socket>
+</div>
