--- a/projects/ambulance/src/app/drivers/list-drivers/list-drivers.component.html
+++ b/projects/ambulance/src/app/drivers/list-drivers/list-drivers.component.html
@@ -5,7 +5,7 @@
   pointerEventsMethod="scrollbar"
   class="heigtMaxScrollbar">
     <amb-table [data]="data" [metadataColumns]="metadataColumns">
-      <ng-container matColumnDef="actions">
+      <ng-container matColumnDef="actions" *roles-allowed="['ADMIN']">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row" class="align-right">
           <button mat-icon-button color="primary" matTooltip="Editar" (click)="edit(row)">
