--- a/projects/ambulance/src/app/users/list-users/list-users.component.html
+++ b/projects/ambulance/src/app/users/list-users/list-users.component.html
@@ -8,15 +8,21 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row" class="align-right">
-          <button mat-icon-button color="primary" matTooltip="Editar">
+          <button mat-icon-button color="primary" matTooltip="Editar" (click)="edit(row)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="accent" matTooltip="Eliminar">
+          <button mat-icon-button color="accent" matTooltip="Eliminar" (click)="delete(row)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
       </ng-container>
     </amb-table>
   </ng-scrollbar>
-  <amb-paginator></amb-paginator>
+  <amb-paginator [pageSize]="pageSize"
+  [length]="totalRecords"
+  (page)="changePage($event)"></amb-paginator>
 </amb-container>
+<amb-keypad
+  [keypadButtons]="keypadButtons"
+  (clickButton)="actions($event)"
+></amb-keypad>
