--- a/projects/login/src/lib/login.component.css
+++ b/projects/login/src/lib/login.component.css
@@ -13,3 +13,17 @@ h2 {
 .recaptcha {
   padding: 10px 0;
 }
+
+.mat-form-field{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.spinner {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
